# sandbox

./: .gitmodules  Build Dependencies to 3rd party libs.md  CMakeLists.txt  README.md
cmake/: SourceGroupByFolder.cmake  external.cmake
src/boost_example/: CMakeLists.txt  Foo.cpp  Foo.h  main.cpp
src/boost_example/puhh/: defs.h
src/ogl_example/: CMakeLists.txt
src/opencv_example/: CMakeLists.txt  DisplayImage.cpp
test/gtest_example/: CMakeLists.txt  FooTest.cpp
test/gtest_example/deep/: InnerTest.cpp
